--- a/dashboard.html
+++ b/dashboard.html
@@ -108,39 +108,42 @@
             <section class="row">
               <div class="col-md-12">
                 <div class="row">
-                  <div class="col-xs-12 col-sm-6 col-lg-4">
+                  <div class="col-xs-12 col-sm-6 col-lg-3">
                     <div class="info-box mb-5">
-                      <div class="info-box-icon"><i class="fab fa-android"></i></div>
+                      <div class="info-box-icon bg-primary"><i class="fab fa-android"></i></div>
                       <div class="info-box-content">
-                        <div class="info-box-text">Por defecto</div>
+                        <div class="info-box-text">bg-primary</div>
                         <div class="info-box-number">10%</div>
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-sm-6 col-lg-4">
-                    <div class="info-box mb-5 info-box-info">
-                      <div class="info-box-icon"><i class="fas fa-camera"></i></div>
+                  <div class="col-xs-12 col-sm-6 col-lg-3">
+                    <div class="info-box mb-5">
+                      <div class="info-box-icon bg-danger"><i class="fas fa-camera"></i></div>
                       <div class="info-box-content">
-                        <div class="info-box-text">Info</div>
+                        <div class="info-box-text">bg-danger</div>
                         <div class="info-box-number">10%</div>
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-sm-6 col-lg-4">
-                    <div class="info-box mb-5 info-box-danger">
+                  <div class="col-xs-12 col-sm-6 col-lg-3">
+                    <div class="info-box mb-5 bg-info">
                       <div class="info-box-icon"><i class="fas fa-user"></i></div>
                       <div class="info-box-content">
-                        <div class="info-box-text">Danger</div>
+                        <div class="info-box-text">bg-info (all)</div>
                         <div class="info-box-number">45%</div>
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-sm-6 col-lg-4">
-                    <div class="info-box mb-5 info-box-success">
+                  <div class="col-xs-12 col-sm-6 col-lg-3">
+                    <div class="info-box mb-5 bg-success">
                       <div class="info-box-icon"><i class="fas fa-shopping-cart"></i></div>
                       <div class="info-box-content">
-                        <div class="info-box-text">Ventas</div>
+                        <div class="info-box-text">bg-success (all)</div>
                         <div class="info-box-number">90%</div>
+                        <div class="progress">
+                          <div class="progress-bar" style="width: 90%"></div>
+                        </div>
                       </div>
                     </div>
                   </div>
