--- a/cdn.html
+++ b/cdn.html
@@ -57,9 +57,9 @@
               </div>
             </div>
                         <ul class="nav flex-column components">   
-                          <li class="nav-item"><a class="nav-link" href="./dashboard.html" title="Inicio"><i class="fas fa-home"></i><span>Inicio</span></a>
+                          <li class="nav-item"><a class="nav-link" href="./dashboard.html" title="Inicio"><i class="fas fa-fw fa-home"></i><span>Inicio</span></a>
                           </li>
-                          <li class="nav-item"><a class="nav-link dropdown-toggle" href="#contenido" title="Contenido" data-toggle="collapse" aria-expanded="false" aria-controls="Contenido"><i class="fas fa-edit"></i><span>Contenido</span></a>
+                          <li class="nav-item"><a class="nav-link dropdown-toggle" href="#contenido" title="Contenido" data-toggle="collapse" aria-expanded="false" aria-controls="Contenido"><i class="fas fa-fw fa-edit"></i><span>Contenido</span></a>
                             <ul class="collapse list-unstyled" id="contenido">
                               <li><a class="nav-link" href="./buttons.html" title="Botones"><i class="far fa-circle"></i><span>Botones</span></a></li>
                               <li><a class="nav-link" href="./icons.html" title="Íconos"><i class="far fa-circle"></i><span>Íconos</span></a></li>
@@ -68,27 +68,29 @@
                               <li><a class="nav-link" href="./typo.html" title="Tipografía"><i class="far fa-circle"></i><span>Tipografía</span></a></li>
                             </ul>
                           </li>
-                          <li class="nav-item"><a class="nav-link" href="./toastr.html" title="Toastr"><i class="fas fa-bullhorn"></i><span>Toastr</span></a>
+                          <li class="nav-item"><a class="nav-link" href="./toastr.html" title="Toastr"><i class="fas fa-fw fa-bullhorn"></i><span>Toastr</span></a>
                           </li>
-                          <li class="nav-item"><a class="nav-link" href="forms.html" title="Formularios"><i class="fab fa-wpforms"></i><span>Formularios</span></a>
+                          <li class="nav-item"><a class="nav-link" href="forms.html" title="Formularios"><i class="fab fa-fw fa-wpforms"></i><span>Formularios</span></a>
                           </li>
-                          <li class="nav-item"><a class="nav-link dropdown-toggle" href="#tables" title="Tablas" data-toggle="collapse" aria-expanded="false" aria-controls="Tablas"><i class="fas fa-table"></i><span>Tablas</span></a>
+                          <li class="nav-item"><a class="nav-link dropdown-toggle" href="#tables" title="Tablas" data-toggle="collapse" aria-expanded="false" aria-controls="Tablas"><i class="fas fa-fw fa-table"></i><span>Tablas</span></a>
                             <ul class="collapse list-unstyled" id="tables">
                               <li><a class="nav-link" href="./tables-1.html" title="Tablas Regulares"><i class="far fa-circle"></i><span>Tablas Regulares</span></a></li>
                               <li><a class="nav-link" href="./tables-2.html" title="DataTables"><i class="far fa-circle"></i><span>DataTables</span></a></li>
                             </ul>
                           </li>
-                          <li class="nav-item"><a class="nav-link dropdown-toggle" href="#modals" title="Modales" data-toggle="collapse" aria-expanded="false" aria-controls="Modales"><i class="far fa-window-restore"></i><span>Modales</span></a>
+                          <li class="nav-item"><a class="nav-link dropdown-toggle" href="#modals" title="Modales" data-toggle="collapse" aria-expanded="false" aria-controls="Modales"><i class="far fa-fw fa-window-restore"></i><span>Modales</span></a>
                             <ul class="collapse list-unstyled" id="modals">
                               <li><a class="nav-link" href="./modals-1.html" title="Modales Regulares"><i class="far fa-circle"></i><span>Modales Regulares</span></a></li>
                               <li><a class="nav-link" href="./modals-2.html" title="Modales Verticales"><i class="far fa-circle"></i><span>Modales Verticales</span></a></li>
                             </ul>
                           </li>
-                          <li class="nav-item"><a class="nav-link" href="./simplebar.html" title="SimpleBar"><i class="fas fa-i-cursor"></i><span>SimpleBar</span></a>
+                          <li class="nav-item"><a class="nav-link" href="./simplebar.html" title="SimpleBar"><i class="fas fa-fw fa-i-cursor"></i><span>SimpleBar</span></a>
                           </li>
-                          <li class="nav-item"><a class="nav-link" href="./cards.html" title="Cards"><i class="fas fa-chalkboard"></i><span>Cards</span></a>
+                          <li class="nav-item"><a class="nav-link" href="./cards.html" title="Cards"><i class="fas fa-fw fa-chalkboard"></i><span>Cards</span></a>
                           </li>
-                          <li class="nav-item"><a class="nav-link active" href="./cdn.html" title="CDN"><i class="fas fa-chalkboard"></i><span>CDN</span></a>
+                          <li class="nav-item"><a class="nav-link active" href="./cdn.html" title="CDN"><i class="fas fa-fw fa-rocket"></i><span>CDN</span></a>
+                          </li>
+                          <li class="nav-item"><a class="nav-link" href="./callouts.html" title="Callouts"><i class="fas fa-fw fa-exclamation-triangle"></i><span>Callouts</span></a>
                           </li>
                         </ul>
           </nav>
